k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: client-app:v0.4
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /etc/nginx/conf.d/default.conf
            name: nginx-config
            subPath: nginx.conf
        ports:
        - containerPort: 80
      volumes:
        - name: nginx-config
          configMap:
            name: cm-nginx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:

      containers:
      - name: server
        image: server-app:v0.1
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
