k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 5000
